tests/samples/valid/static_alloc.pn
const C: &[500_000_000]u8 = alloc!();

fn foo(x: &&u8)
{
	// This should not be allowed because pointees are mutable.
	&x = &C;
}

fn main() -> u8
{
	var a: u8 = 17;
	var x: &u8 = &a;
	foo(&&x);
	return: x
}
