tests/samples/invalid/pointer_to_parameter.pn
fn foo(y: u8)
{
	// This should not be allowed because pointees must be mutable.
	var x: &u8 = &y;
	x = 999;
}

fn main()
{
	foo(100);
}
